@@ -38,6 +38,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4084: Fix max, min, max_mag and min_mag Decimal methods to
+  give correct results in the case where one argument is a quiet NaN
+  and the other is a finite number that requires rounding.
+
 - Issue #4483: _dbm module now builds on systems with gdbm & gdbm_compat
   libs.
 
